[FIX] Handle divide by 0 and 2 digit number behind comma

--- a/src/components/Result.css
+++ b/src/components/Result.css
@@ -125,7 +125,7 @@
 
 @media (min-width: 600px) {
   .result-operation {
-    font-size: 4rem;
+    font-size: 6rem;
   }
   .result-display {
     font-size: 12rem;
